practica1/jcc_files/cpt.java
/* Generated By:JavaCC: Do not edit this line. cpt.java */
package traductor;

//...

public class cpt implements cptConstants {
   //...

   public static void main(String[] args) {
           cpt parser = null;

           try {
                   if(args.length == 0) {
                           parser = new cpt(System.in);
                   }
                   else {
                           parser = new cpt(new java.io.FileInputStream(args[0]));
                   }
                   //Programa es el símbolo inicial de la gramática
                   parser.Programa();
                   //...
                   System.out.println("***** An\u00e1lisis terminado con \u00e9xito *****");
           }
           catch (java.io.FileNotFoundException e) {
                   System.err.println ("Fichero " + args[0] + " no encontrado.");
           }
           catch (TokenMgrError e) {

                   System.err.println("LEX_ERROR: " + e.getMessage());
           }
           catch (Exception e) {
                        // Handle the exception
                        System.err.println("An exception occurred: " + e.getMessage());
           }
        }

//------------ Símbolo inicial de la gramática. Para análisis léxico no hace falta más
  static final public void Programa() throws ParseException {
    jj_consume_token(tPROCEDIMIENTO);
    jj_consume_token(tIDENT);
    jj_consume_token(tIS);
    Cuerpo();
    jj_consume_token(tDONE);
    jj_consume_token(0);
  }

  static final public void Cuerpo() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tVAR:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      DeclaraVar();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPROCEDIMIENTO:
      case tFUNCION:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tFUNCION:
        DeclaraFunc();
        break;
      case tPROCEDIMIENTO:
        DeclaraProc();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    BloqueInstrucciones();
  }

  static final public void DeclaraProc() throws ParseException {
    jj_consume_token(tPROCEDIMIENTO);
    jj_consume_token(tIDENT);
    Parametros();
    jj_consume_token(tIS);
    Cuerpo();
    jj_consume_token(tDONE);
  }

  static final public void DeclaraFunc() throws ParseException {
    jj_consume_token(tFUNCION);
    jj_consume_token(tIDENT);
    Parametros();
    jj_consume_token(tFLECHA);
    jj_consume_token(tESCALAR);
    jj_consume_token(tIS);
    Cuerpo();
    jj_consume_token(tDONE);
  }

  static final public void Parametros() throws ParseException {
    jj_consume_token(tABRE_PARENTESIS);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tOUT:
    case tIN:
    case tINOUT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tIN:
        jj_consume_token(tIN);
        break;
      case tOUT:
        jj_consume_token(tOUT);
        break;
      case tINOUT:
        jj_consume_token(tINOUT);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      ListIdent();
      jj_consume_token(tDOSPUNTOS);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tARRAY:
        ArrayCabecera();
        break;
      case tESCALAR:
        jj_consume_token(tESCALAR);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
        jj_consume_token(tCOMA);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tIN:
          jj_consume_token(tIN);
          break;
        case tOUT:
          jj_consume_token(tOUT);
          break;
        case tINOUT:
          jj_consume_token(tINOUT);
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        ListIdent();
        jj_consume_token(tDOSPUNTOS);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tARRAY:
          ArrayCabecera();
          break;
        case tESCALAR:
          jj_consume_token(tESCALAR);
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(tCIERRA_PARENTESIS);
  }

  static final public void ArrayCabecera() throws ParseException {
    jj_consume_token(tARRAY);
    jj_consume_token(tOFOP);
    jj_consume_token(tESCALAR);
    jj_consume_token(tSIZEOP);
    jj_consume_token(tLITERAL_NUMERO);
  }

  static final public void DeclaraVar() throws ParseException {
    jj_consume_token(tVAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tARRAY:
      ListArray();
      break;
    case tIDENT:
      ListEscalar();
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(tPUNTO_COMA);
  }

  static final public void ListArray() throws ParseException {
    jj_consume_token(tARRAY);
    ListIdent();
    jj_consume_token(tOFOP);
    jj_consume_token(tESCALAR);
    jj_consume_token(tSIZEOP);
    jj_consume_token(tLITERAL_NUMERO);
  }

  static final public void ListEscalar() throws ParseException {
    ListIdent();
    jj_consume_token(tDOSPUNTOS);
    jj_consume_token(tESCALAR);
  }

  static final public void ListIdent() throws ParseException {
    jj_consume_token(tIDENT);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMA:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      jj_consume_token(tCOMA);
      jj_consume_token(tIDENT);
    }
  }

  static final public void BloqueInstrucciones() throws ParseException {
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tWHENOP:
      case tLOOPOP:
      case tRETURN:
      case tREAD:
      case tREADLN:
      case tPRINT:
      case tPRINTLN:
      case tINT_TO_CHAR:
      case tCHAR_TO_INT:
      case tTERMINAR:
      case tIDENT:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      Instruccion();
    }
  }

  static final public void Instruccion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tLOOPOP:
      Loop();
      break;
    case tWHENOP:
      When();
      break;
    case tTERMINAR:
      jj_consume_token(tTERMINAR);
      break;
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_1(2)) {
        Asignacion();
        jj_consume_token(tPUNTO_COMA);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tREAD:
        case tREADLN:
        case tPRINT:
        case tPRINTLN:
        case tINT_TO_CHAR:
        case tCHAR_TO_INT:
        case tIDENT:
          Call();
          jj_consume_token(tPUNTO_COMA);
          break;
        case tRETURN:
          Return();
          jj_consume_token(tPUNTO_COMA);
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void Asignacion() throws ParseException {
    jj_consume_token(tIDENT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tABRE_CORCHETE:
      jj_consume_token(tABRE_CORCHETE);
      Expresion();
      jj_consume_token(tCIERRA_CORCHETE);
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(tASIGNADOR);
    Expresion();
  }

  static final public void Loop() throws ParseException {
    jj_consume_token(tLOOPOP);
    jj_consume_token(tABRE_PARENTESIS);
    Expresion();
    jj_consume_token(tCIERRA_PARENTESIS);
    jj_consume_token(tDOOP);
    BloqueInstrucciones();
    jj_consume_token(tDONE);
  }

  static final public void When() throws ParseException {
    jj_consume_token(tWHENOP);
    jj_consume_token(tABRE_PARENTESIS);
    Expresion();
    jj_consume_token(tCIERRA_PARENTESIS);
    jj_consume_token(tDOOP);
    BloqueInstrucciones();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tELSEWHENOP:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
      jj_consume_token(tELSEWHENOP);
      jj_consume_token(tABRE_PARENTESIS);
      Expresion();
      jj_consume_token(tCIERRA_PARENTESIS);
      jj_consume_token(tDOOP);
      BloqueInstrucciones();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tELSEOP:
      jj_consume_token(tELSEOP);
      BloqueInstrucciones();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(tDONE);
  }

  static final public void Call() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tIDENT:
      jj_consume_token(tIDENT);
      break;
    case tINT_TO_CHAR:
      jj_consume_token(tINT_TO_CHAR);
      break;
    case tCHAR_TO_INT:
      jj_consume_token(tCHAR_TO_INT);
      break;
    case tPRINT:
      jj_consume_token(tPRINT);
      break;
    case tPRINTLN:
      jj_consume_token(tPRINTLN);
      break;
    case tREAD:
      jj_consume_token(tREAD);
      break;
    case tREADLN:
      jj_consume_token(tREADLN);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(tABRE_PARENTESIS);
    if (jj_2_2(2)) {
      Expresion();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_7;
        }
        jj_consume_token(tCOMA);
        Expresion();
      }
    } else {
      ;
    }
    jj_consume_token(tCIERRA_PARENTESIS);
  }

  static final public void Return() throws ParseException {
    jj_consume_token(tRETURN);
    Expresion();
  }

  static final public void Expresion() throws ParseException {
    Relacion();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tOPERADOR_BOOLEANO:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_8;
      }
      jj_consume_token(tOPERADOR_BOOLEANO);
      Relacion();
    }
  }

  static final public void Relacion() throws ParseException {
    ExpresionSimple();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tOPERADOR_RELACIONAL:
      jj_consume_token(tOPERADOR_RELACIONAL);
      ExpresionSimple();
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
  }

  static final public void ExpresionSimple() throws ParseException {
    Termino();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tOPERADOR_ARITMETICO_SUMATIVO:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_9;
      }
      jj_consume_token(tOPERADOR_ARITMETICO_SUMATIVO);
      Termino();
    }
  }

  static final public void Termino() throws ParseException {
    Factor();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tOPERADOR_MULTIPLICATIVO:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_10;
      }
      jj_consume_token(tOPERADOR_MULTIPLICATIVO);
      Factor();
    }
  }

  static final public void Factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tOPERADOR_ARITMETICO_SUMATIVO:
    case tNOT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tNOT:
        jj_consume_token(tNOT);
        break;
      case tOPERADOR_ARITMETICO_SUMATIVO:
        jj_consume_token(tOPERADOR_ARITMETICO_SUMATIVO);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tABRE_PARENTESIS:
      jj_consume_token(tABRE_PARENTESIS);
      Expresion();
      jj_consume_token(tCIERRA_PARENTESIS);
      break;
    case tREAD:
    case tREADLN:
    case tPRINT:
    case tPRINTLN:
    case tINT_TO_CHAR:
    case tCHAR_TO_INT:
    case tLITERAL_NUMERO:
    case tLITERAL_CARACTER:
    case tLITERAL_BOOLEANO:
    case tIDENT:
    case tLITERAL_STRING:
      Primario();
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Primario() throws ParseException {
    if (jj_2_3(2)) {
      Call();
    } else if (jj_2_4(2)) {
      jj_consume_token(tIDENT);
      jj_consume_token(tABRE_CORCHETE);
      Expresion();
      jj_consume_token(tCIERRA_CORCHETE);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tIDENT:
        jj_consume_token(tIDENT);
        break;
      case tLITERAL_CARACTER:
        jj_consume_token(tLITERAL_CARACTER);
        break;
      case tLITERAL_NUMERO:
        jj_consume_token(tLITERAL_NUMERO);
        break;
      case tLITERAL_BOOLEANO:
        jj_consume_token(tLITERAL_BOOLEANO);
        break;
      case tLITERAL_STRING:
        jj_consume_token(tLITERAL_STRING);
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_3R_26() {
    if (jj_3R_27()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_scan_token(tOPERADOR_MULTIPLICATIVO)) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(tOPERADOR_RELACIONAL)) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(48)) {
    jj_scanpos = xsp;
    if (jj_scan_token(45)) return true;
    }
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(tOPERADOR_ARITMETICO_SUMATIVO)) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    if (jj_scan_token(tABRE_PARENTESIS)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_24()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) return true;
    }
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(tCOMA)) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(tOPERADOR_BOOLEANO)) return true;
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_3R_22()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_23()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_3R_20()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_21()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_3R_18()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_19()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_3R_16()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_17()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(tABRE_CORCHETE)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_12()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_13()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(tIDENT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_15()) jj_scanpos = xsp;
    if (jj_scan_token(tASIGNADOR)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(51)) {
    jj_scanpos = xsp;
    if (jj_scan_token(36)) {
    jj_scanpos = xsp;
    if (jj_scan_token(37)) {
    jj_scanpos = xsp;
    if (jj_scan_token(34)) {
    jj_scanpos = xsp;
    if (jj_scan_token(35)) {
    jj_scanpos = xsp;
    if (jj_scan_token(32)) {
    jj_scanpos = xsp;
    if (jj_scan_token(33)) return true;
    }
    }
    }
    }
    }
    }
    if (jj_scan_token(tABRE_PARENTESIS)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(tIDENT)) return true;
    if (jj_scan_token(tABRE_CORCHETE)) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_scan_token(51)) {
    jj_scanpos = xsp;
    if (jj_scan_token(42)) {
    jj_scanpos = xsp;
    if (jj_scan_token(41)) {
    jj_scanpos = xsp;
    if (jj_scan_token(43)) {
    jj_scanpos = xsp;
    if (jj_scan_token(56)) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public cptTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  /** Whether we are looking ahead. */
  static private boolean jj_lookingAhead = false;
  static private boolean jj_semLA;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[27];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x100,0x6000000,0x6000000,0x70000000,0x800,0x200,0x70000000,0x800,0x70000000,0x800,0x200,0x80044000,0x44000,0x80000000,0x800000,0x10000,0x20000,0x0,0x200,0x0,0x0,0x0,0x0,0x0,0x0,0x200000,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x100,0x0,0x0,0x100,0x0,0x80000,0x0,0x8103f,0x1000,0x8003f,0x0,0x0,0x0,0x8003f,0x0,0x8000,0x20000,0x2000,0x4000,0x12000,0x12000,0x1080e3f,0x1080e00,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[4];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public cpt(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public cpt(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new cptTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public cpt(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new cptTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
